data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1496.wast
;; 7. **Test 7**: Execute a series of `br_if` instructions in succession, each contingent upon values manipulated within the loop. Ensure that a branch to `unreachable` occurs only when a specific stack condition is met, checking the precision of stack handling before hitting `unreachable`.

(assert_invalid
  (module
    (func $type-br_if-edge-case
      (block (result i32)
        (block (result i32)
          (br_if 1 (i32.const 1))
        )
        (return (i32.const 0))
      )
      (i32.const 2)
      (i32.add)
    )
  )
  "type mismatch"
)